geschikt gemaakt voor mobiele telefoon.

--- a/Android/OntworteldeBoom/app/src/main/res/layout/fragment_5.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/layout/fragment_5.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:text="Toon DB"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"/>
 
         <Button
             android:id="@+id/btnExportDB"
