--- a/Android/OntworteldeBoom/app/src/main/res/values-v21/base-colors.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/values-v21/base-colors.xml
@@ -115,7 +115,7 @@
         <color name="Purple">#800080</color>
         <color name="Maroon">#800000</color>
         <color name="Aquamarine">#7FFFD4</color>
-        <color name="Chartreuse">#7FFF00</color>
+        <color name="Chartreuse">#7fff00</color>
         <color name="LawnGreen">#7CFC00</color>
         <color name="MediumSlateBlue">#7B68EE</color>
         <color name="LightSlateGray">#778899</color>
@@ -152,7 +152,7 @@
         <color name="Teal">#008080</color>
         <color name="Green">#008000</color>
         <color name="DarkGreen">#006400</color>
-        <color name="Blue">#0000FF</color>
+        <color name="Blue">#0000ff</color>
         <color name="MediumBlue">#0000CD</color>
         <color name="DarkBlue">#00008B</color>
         <color name="Navy">#000080</color>
