--- a/Android/OntworteldeBoom/app/src/main/res/values/base-strings.xml
+++ b/Android/OntworteldeBoom/app/src/main/res/values/base-strings.xml
@@ -16,7 +16,7 @@
 -->
 
 <resources>
-    <string name="app_name">Ontwortelde Boom</string>
+    <string name="app_name">Ontwortelde Boom USA</string>
     <string name="intro_message">
         <![CDATA[
         
